--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -292,11 +292,19 @@
       &--mobile
         display: block
 
-  .baby-diet, .baby-diet-v2
+  .baby-diet
     &__cat, &__dog
       height: 628px
     &__description
       padding: 110px 0 0 20px
+  .baby-diet-v2
+    &__cat, &__dog
+      height: 558px
+    &__description
+      padding: 40px 0 0 20px
+
+  .baby-diet, .baby-diet-v2
+    
     &__red-line
       &--left
         top: 144px
