Fixed Blocks Margin Bottom

--- a/css/style.css
+++ b/css/style.css
@@ -725,7 +725,7 @@ body {
   .diet__background-image--tablet {
     display: block;
   }
-  .baby-diet--margin, .baby-diet-v2--margin {
+  .baby-diet--margin, .baby-diet-v2--margin, .cat-and-dog--margin {
     margin-bottom: 20px;
   }
   .baby-diet__container, .baby-diet-v2__container {
