--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -174,9 +174,11 @@
       &--tablet
         display: block
 
-  .baby-diet, .baby-diet-v2
+  .baby-diet, .baby-diet-v2, .cat-and-dog
     &--margin
       margin-bottom: 20px
+
+  .baby-diet, .baby-diet-v2    
     &__container
       display: block
     &__cat, &__dog
